# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
include/command_manager/: command.hpp  command_context.hpp  command_manager.hpp  command_option.hpp  config.hpp  execution_context.hpp  options.hpp  predefined_flags.hpp  status.hpp
include/command_manager/command_options/: option_alive_prob.hpp  option_cell_repr.hpp  option_delayms.hpp  option_generation.hpp  option_resize.hpp  option_set_cells.hpp
include/command_manager/command_options/set_command_options/: option_alive_prob.hpp  option_cell_repr.hpp  option_cell_status.hpp  option_delayms.hpp  option_generation.hpp  option_resize.hpp
include/command_manager/commands/: quit_command.hpp  rand_init_command.hpp  run_command.hpp  set_command.hpp
include/game_logic/: cell_detail.hpp  constants.hpp  game.hpp  game_state.hpp  gol.hpp
include/game_manager/: game_manager.hpp
include/render_manager/: render_manager.hpp  renderer.hpp
src/: main.cpp
src/command_manager/: CMakeLists.txt  command.cpp  command_manager.cpp  command_option.cpp  predefined_flags.cpp
src/command_manager/command_options/: option_alive_prob.cpp  option_cell_repr.cpp  option_cell_status.cpp  option_delayms.cpp  option_generation.cpp  option_resize.cpp
src/command_manager/commands/: quit_command.cpp  rand_init_command.cpp  run_command.cpp  set_command.cpp
src/game_logic/: CMakeLists.txt  game.cpp
src/game_manager/: CMakeLists.txt  game_manager.cpp
src/input_manager/: CMakeLists.txt
src/render_manager/: CMakeLists.txt  render_manager.cpp  renderer.cpp
